# EPRI-GMDM-II

./: LICENSE  README.md  pyproject.toml
Artifacts/asset_info/: Asset.inline-rdfs.adoc  Asset.rdfs-2020.rdfs  Asset.rdfs-t2b.puml
Artifacts/connectivity/: UnbalancedConnectivity.inline-rdfs.adoc  UnbalancedConnectivity.rdfs-2020.rdfs  UnbalancedConnectivity.rdfs-t2b.puml
Artifacts/diagram_layout/: DiagramLayout.inline-rdfs.adoc  DiagramLayout.rdfs-2020.rdfs  DiagramLayout.rdfs-t2b.puml
Artifacts/electrical/: UnbalancedElectrical.inline-rdfs.adoc  UnbalancedElectrical.rdfs-2020.rdfs  UnbalancedElectrical.rdfs-t2b.puml
Artifacts/geo_location/: GeographicalLocation.inline-rdfs.adoc  GeographicalLocation.rdfs-2020.rdfs  GeographicalLocation.rdfs-t2b.puml
CIMTool-Project/GMDM II V7/: .cimtool-settings  .project
CIMTool-Project/GMDM II V7/Profiles/: Asset.owl  Asset.rdfs-2020.rdfs  Asset.rdfs-t2b.puml  DiagramLayout.owl  DiagramLayout.rdfs-2020.rdfs  DiagramLayout.rdfs-t2b.puml  GeographicalLocation.owl  GeographicalLocation.rdfs-2020.rdfs  GeographicalLocation.rdfs-t2b.puml  market_node.owl  (+7 more)
IEEE9500Node/: 9500node_cleanup.ipynb
IEEE9500Node/CIM18GMDM/: additive.xml  asset.xml  formative.xml
IEEE9500Node/OpenDSS/: BusCoords.dss  Capacitors.dss  EnergyStorage.dss  Generators.dss  LatLongCoords.dss  LinesSwitchesGeometry.dss  LinesSwitchesLineCodes.dss  Master-bal-initial-config.dss  Master-unbal-initial-config.dss  Switches.dss  Switches2.dss  Transformers.dss  Voltage_Bases_DSS.DSS
Variable-Fidelity-Vocab/: vfm-concepts.ttl  vfm-profiles.ttl  vfm-vocab.ttl
(+10 files in other folders)
