[tool.poetry]
name = "epri-gmdm-ii"
version = "0.0.1"
description = "EPRI GMDM Modeling"
authors = ["A. Anderson <19935503+AAndersn@users.noreply.github.com>"]
packages = [
    { include = "gmdm-python" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cim-graph = "^0.3.2a3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
